style2.css
body {
  font-family: Abel, Gadget, sans-serif;
	width: 100wh;
	height: 90vh;
  color: #696969;
	background: linear-gradient(-45deg, #FFA2D1, #FFF5EE, #FF99CC, #FDDDED);
	background-size: 400% 400%;
	-webkit-animation: Gradient 10s ease infinite;
	-moz-animation: Gradient 10s ease infinite;
	animation: Gradient 15s ease infinite;
}

@-webkit-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@-moz-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

::-webkit-scrollbar {
    display: none;
}

#instagram{
  width: 5.5em;
  height: auto;
  border: 0;
}

#linkedin{
  width: 5.6em;
  height: auto;
  border: 0;
}

#resume{
  width: 5.6em;
  height: auto;
  border: 0;
}

#github{
  width: 5.6em;
  height: auto;
  border: 0;
}

#email{
  width: 5.6em;
  height: auto;
  border:0;
}

.social{
  margin-right: 15px;
  margin-left: 15px;
  margin-bottom: 30px;
  text-decoration: none;
}


.social:hover{
  opacity: .5;
  text-decoration: none;
}

#arrow{
  width: .5em;
  height: auto;
  border: 0;
  margin-left: 15px;
  margin-right: 15px;
}

div.row{
  text-align: center;
}

h1 {
  color: #C71585;
  text-align: center;
  font-size: 6em;
  clear: both;
  padding-top: 10px;
  padding-bottom: 10px;
}

p {
  text-align: center;
  font-size: 2em;
}


a:link{
  color: #000000;
  text-decoration: none;
}
a:visited{
  color: #000000;
  text-decoration: none;
}
a:hover{
  color: #000000;
  text-decoration: underline;
}
a:active{
  color: #000000;
  text-decoration: underline;
}

h2{
  text-align: center;
  font-size: 3em;
  padding-bottom: 20px;
}


h3, h4, h5{
  color: #C71585;
  text-align: center;
  font-size: 3em;
  margin: auto;
}

footer{
  font-size: .5em;
  padding-top: 20px;
  padding-bottom: 30px;
}

